# Vane-Trustless-Payment

./: .gitignore  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/MultisigPayment/: Cargo.toml  README.md
pallets/MultisigPayment/src/: benchmarking.rs  helper.rs  lib.rs  mock.rs  tests.rs
pallets/Register/: Cargo.toml  README.md
pallets/Register/src/: lib.rs
primitive/: Cargo.toml
primitive/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
